<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.bbk.cristinaborri.whoshowedapp.MainActivity">
    <item
        android:id="@+id/show_attendees_menu_item"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/show_attendees_menu_item_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_event_menu_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_event_menu_item_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit_event_menu_item"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit_event_menu_item_label"
        app:showAsAction="always" />
</menu>
