<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/view_attendee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/attendee_name_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/view_attendee_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/attendee_email_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/view_attendee_code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/unique_code_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_attendee_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/unique_code_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
