<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/view_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/edit_event_name_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/view_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/edit_event_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/view_event_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/edit_event_details_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/view_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/event_location_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/view_event_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/view_event_address_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/event_map_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start_event_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@android:drawable/ic_media_play" />

</android.support.design.widget.CoordinatorLayout>
